syntax = "proto3";

package analytics;
option go_package = "api/pb";
message TotalSales{
  int32 sales =3;
}
message Customer{
  string id = 1;
  string name = 2;
  int32 sales = 3;
}
message Product{
  string id=1;
  string name=2;
  int32 sales = 3;
}
message GetTotalSalesRequest{}
message GetSalesByProductRequest{}
message GetTopCustomersRequest{}

message GetTotalSalesResponse { TotalSales sales = 1; }
message GetTopCustomersResponse { repeated Customer customers = 1; }
message GetSalesByProductResponse { repeated Product products = 1; }



service CustomerService {
  rpc GetTotalSales(GetTotalSalesRequest) returns (GetTotalSalesResponse);
  rpc GetSalesByProduct(GetSalesByProductRequest) returns (GetSalesByProductResponse);
  rpc GetTopCustomers(GetTopCustomersRequest) returns ( GetTopCustomersResponse);
}