syntax = "proto3";
import "google/protobuf/timestamp.proto";
package transaction;
option go_package = "api/pb";
message TransactionQueryRequest{
  string ID = 1;
}
message AllTransactionQueryRequest{}

message Transaction{
  string ID = 1;
  string Name = 2;
  int32 TotalPrice = 3;
  string ProductID = 4;
  string CustomerID = 5;
  int32 Quantity = 6;
  google.protobuf.Timestamp created_at = 7;

}

message TransactionResponse {
  Transaction transaction = 1;
}



message TransactionListResponse { repeated Transaction transactions = 1; }


service TransactionService {
  rpc AddTransaction(Transaction) returns (TransactionResponse);
  rpc FindTransactionByID (TransactionQueryRequest) returns (TransactionResponse);
  rpc GetAllTransaction (AllTransactionQueryRequest) returns (TransactionListResponse);
}

